// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "equitas-selfe",
    "sc-ultimate",
    "yes-marquee",
    "axis-magnus",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "amex-gold",
    "hdfc-phonepe-ultimo",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "sbi-card-pulse",
    "axis-ace",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "amex-gold",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "indusind-eazydiner-platinum",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "amex-gold",
    "hdfc-phonepe-ultimo",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "sbi-card-pulse",
    "axis-ace",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "phonepe-sbi-select-black",
    "sc-ultimate",
    "amex-gold",
    "hdfc-phonepe-ultimo",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "sbi-card-prime",
    "sbi-card-pulse",
    "axis-ace",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "bobcard-eterna",
    "yes-paisabazaar-paisasave",
    "yes-first-preferred",
    "landmark-rewards-sbi-prime",
    "sbi-card-prime",
    "equitas-selfe",
    "rbl-icon",
    "kotak-indianoil",
  ],
  "combo-premium-travel": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "icici-adani-one-signature",
    "axis-horizon",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest-premium",
    "bobcard-eterna",
    "sbi-card-miles-elite",
    "landmark-rewards-sbi-prime",
    "bobcard-etihad-guest",
    "idfc-mayura",
    "reliance-sbi-prime",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-magnus",
    "axis-ace",
    "axis-horizon",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-flipkart",
    "axis-privilege",
    "axis-cashback",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "idfc-wow",
    "au-ixigo",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "hsbc-premier",
    "bobcard-etihad-guest",
    "idfc-ashva",
    "icici-makemytrip",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "idfc-wow",
    "idfc-mayura",
    "au-ixigo",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "yes-marquee",
    "axis-magnus",
    "kotak-solitaire",
    "kotak-white-reserve",
    "axis-reserve",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "aurum-sbi",
    "sc-beyond",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-magnus",
    "axis-horizon",
    "axis-privilege-easy",
    "axis-privilege",
    "axis-miles-and-more",
    "axis-kwik",
    "axis-rewards",
    "axis-indianoil",
    "axis-indianoil-easy",
    "axis-indigo-premium",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop-black",
    "hdfc-irctc",
    "hdfc-tata-neu-plus",
    "hdfc-moneyback-plus",
    "hdfc-shoppers-stop",
    "hdfc-indianoil",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-coral-rupay",
    "icici-coral",
    "icici-sapphiro",
    "icici-sapphiro-rupay",
    "icici-rubyx",
    "icici-platinum-chip",
    "icici-emeralde",
  ],
  "issuer-sbi": [
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "sbi-card-prime",
    "sbi-card-elite",
    "aurum-sbi",
    "sbi-card-miles-elite",
    "irctc-rupay-sbi",
    "tata-neu-plus-sbi",
    "reliance-sbi-prime",
    "landmark-rewards-sbi-prime",
    "irctc-sbi-platinum",
    "shaurya-select-sbi",
  ],
  "lifetime-free": [
    "hsbc-visa-platinum",
    "au-ixigo",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
    "idfc-first-select",
  ],
  "lounge": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus-burgundy",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "sc-beyond",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "equitas-selfe",
    "amex-platinum-travel",
    "hdfc-diners-club-privilege",
    "bobcard-etihad-guest-premium",
    "indusind-eazydiner",
    "amex-membership-rewards",
    "hdfc-marriott-bonvoy",
    "equitas-powermiles",
    "bobcard-eterna",
    "amex-gold",
  ],
  "max-fee-zero": [
    "hsbc-visa-platinum",
    "au-ixigo",
    "scapia-federal",
    "scapia-bobcard",
    "indusind-tiger",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "idfc-first-wealth",
    "idfc-first-select",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "csb-jupiter-edge-plus",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "bobcard-eterna",
    "sbi-cashback",
    "kotak-cashback-plus",
    "axis-fibe",
    "yes-pop-club",
    "cheq-au",
    "hdfc-moneyback-plus",
    "hdfc-pixel-play",
  ],
  "merchant-flipkart": [
    "flipkart-sbi",
    "axis-flipkart",
    "indusind-eazydiner",
    "yes-marquee",
    "bobcard-eterna",
    "yes-reserv",
    "au-ixigo",
    "yes-pop-club",
    "rbl-world-max",
    "idfc-ashva",
    "simplyclick-sbi",
    "idfc-mayura",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "indusind-eazydiner",
    "bobcard-eterna",
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "hdfc-diners-club-privilege",
    "yes-marquee",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "au-ixigo",
    "yes-reserv",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
    "axis-airtel",
    "reliance-sbi-prime",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "phonepe-sbi-select-black",
    "reliance-sbi-prime",
    "sbi-card-miles",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "hdfc-shoppers-stop",
    "scapia-federal",
  ],
  "network-visa": [
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "indusind-eazydiner",
    "bobcard-eterna",
    "au-ixigo",
    "hsbc-live-plus",
    "sbi-cashback",
    "sbi-card-elite",
    "sbi-card-prime",
  ],
  "segment-beginner": [
    "phonepe-sbi-select-black",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "sbi-cashback",
    "yes-kiwi",
    "hdfc-swiggy-orange",
    "amex-smartearn",
    "axis-airtel",
    "hdfc-swiggy-black",
    "csb-jupiter-edge-plus",
    "tata-neu-infinity-sbi",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "yes-marquee",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest-premium",
    "indusind-eazydiner",
    "bobcard-eterna",
    "yes-reserv",
    "amex-membership-rewards",
  ],
  "segment-premium": [
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "yes-marquee",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest-premium",
    "indusind-eazydiner",
    "bobcard-eterna",
    "amex-membership-rewards",
    "yes-reserv",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "sc-beyond",
    "aurum-sbi",
    "krisflyer-sbi-apex",
    "kotak-white-reserve",
  ],
  "spend-fuel-heavy": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "bpcl-sbi",
    "axis-indianoil",
    "idfc-first-power",
    "hdfc-indianoil",
    "kotak-cashback-plus",
    "axis-indianoil-premium",
    "kotak-pvr-inox",
    "sc-priority-visa-infinite",
    "idfc-first-earn",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "icici-times-black",
    "yes-marquee",
    "sc-ultimate",
  ],
  "spend-international": [
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "amex-membership-rewards",
    "bobcard-etihad-guest-premium",
    "hsbc-premier",
    "bobcard-eterna",
    "hdfc-infinia-metal",
    "scapia-federal",
    "scapia-bobcard",
    "amex-gold",
    "bobcard-premier",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "sc-ultimate",
    "icici-times-black",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hsbc-travelone",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "equitas-selfe",
    "amex-platinum-travel",
    "sc-ultimate",
    "amex-membership-rewards",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "equitas-selfe",
    "axis-magnus",
    "yes-marquee",
    "sc-ultimate",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "icici-times-black",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-phonepe-ultimo",
    "sbi-cashback",
    "hdfc-swiggy-orange",
    "axis-airtel",
    "axis-ace",
    "csb-jupiter-edge-plus",
    "hdfc-swiggy-black",
    "hdfc-millennia",
    "titan-sbi",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "hdfc-marriott-bonvoy",
    "yes-first-preferred",
    "landmark-rewards-sbi-prime",
    "axis-fibe",
    "sbi-card-prime",
    "equitas-selfe",
  ],
  "usecase-entertainment": [
    "yes-marquee",
    "indusind-eazydiner",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "yes-reserv",
    "sbi-card-prime",
    "sbi-card-elite",
    "au-ixigo",
    "yes-pop-club",
    "landmark-rewards-sbi-prime",
    "rbl-world-max",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "idfc-first-power",
    "hdfc-indianoil",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "indusind-eazydiner",
    "kotak-cashback-plus",
    "bpcl-sbi-octane",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "equitas-selfe",
    "sbi-cashback",
    "hdfc-pixel-play",
    "hdfc-moneyback-plus",
  ],
  "usecase-online": [
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "csb-jupiter-edge-plus",
    "bobcard-eterna",
    "hdfc-pixel-play",
    "axis-cashback",
    "simplyclick-sbi",
    "indusind-eazydiner",
    "phonepe-sbi-purple",
    "kotak-cashback-plus",
    "yes-pop-club",
    "rbl-cookies",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "icici-adani-one-signature",
    "axis-horizon",
    "hdfc-marriott-bonvoy",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "phonepe-sbi-select-black",
    "reliance-sbi-prime",
    "sbi-card-miles",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
    "hdfc-shoppers-stop",
    "scapia-federal",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-pixel-play",
      "hdfc-swiggy-black",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
      "hdfc-regalia-gold",
    ],
  },
  "category-rent": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "sc-ultimate",
      "axis-magnus-burgundy",
      "axis-magnus",
      "sc-beyond",
    ],
  },
  "category-rent-payment": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "amex-platinum-travel",
      "sc-ultimate",
      "axis-magnus-burgundy",
      "axis-magnus",
      "sc-beyond",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "indusind-eazydiner",
      "bobcard-eterna",
    ],
  },
  "combo-premium-travel": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "axis-horizon",
      "icici-adani-one-signature",
      "bobcard-etihad-guest-premium",
      "hdfc-marriott-bonvoy",
      "bobcard-eterna",
      "bobcard-etihad-guest",
      "sbi-card-miles-elite",
      "idfc-mayura",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-magnus-burgundy",
      "axis-magnus",
      "axis-horizon",
      "axis-privilege-easy",
    ],
  },
  "forex": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "hsbc-premier",
      "scapia-federal",
      "scapia-bobcard",
      "idfc-mayura",
      "idfc-wow",
      "equitas-powermiles",
      "au-ixigo",
    ],
  },
  "forex-zero": {
    "Cashback cards": [],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "scapia-federal",
      "scapia-bobcard",
      "idfc-mayura",
      "idfc-wow",
      "kotak-solitaire",
      "au-ixigo",
      "rbl-world-safari",
      "indusind-pioneer-heritage-metal",
    ],
  },
  "guest-lounge-query": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
      "axis-magnus",
      "yes-marquee",
      "sc-beyond",
      "idfc-mayura",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "yes-marquee",
      "axis-magnus",
      "kotak-solitaire",
      "kotak-white-reserve",
      "axis-reserve",
      "hdfc-diners-club-black-metal",
    ],
  },
  "issuer-amex": {
    "Cashback cards": [],
    "Rewards cards": [
      "amex-platinum-travel",
      "amex-membership-rewards",
      "amex-gold",
      "amex-platinum-reserve",
      "amex-smartearn",
      "amex-platinum",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-magnus-burgundy",
      "axis-magnus",
      "axis-horizon",
      "axis-privilege-easy",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
      "hdfc-pixel-play",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-makemytrip",
      "icici-coral-rupay",
      "icici-coral",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "phonepe-sbi-purple",
      "bpcl-sbi-octane",
      "titan-sbi",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "tata-neu-infinity-sbi",
      "sbi-card-prime",
      "sbi-card-elite",
      "aurum-sbi",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "yes-kiwi",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "au-ixigo",
      "scapia-federal",
      "scapia-bobcard",
      "indusind-tiger",
      "indusind-eazydiner-platinum",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus-burgundy",
      "axis-reserve",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "equitas-selfe",
      "amex-platinum-travel",
      "hdfc-diners-club-privilege",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "au-ixigo",
      "scapia-federal",
      "scapia-bobcard",
      "indusind-tiger",
      "indusind-eazydiner-platinum",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "phonepe-sbi-select-black",
      "csb-jupiter-edge-plus",
      "sbi-cashback",
      "kotak-cashback-plus",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "bobcard-eterna",
      "yes-reserv",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "flipkart-sbi",
      "axis-flipkart",
      "axis-samsung-signature",
      "phonepe-sbi-select-black",
      "hdfc-pixel-play",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "cheq-au",
      "yes-marquee",
      "bobcard-eterna",
      "yes-reserv",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "csb-jupiter-edge-plus",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "yes-marquee",
      "cheq-au",
      "bobcard-eterna",
      "indusind-eazydiner",
      "yes-reserv",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "sbi-cashback",
      "hdfc-swiggy-orange",
      "axis-airtel",
      "hdfc-swiggy-black",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "sc-ultimate",
      "yes-reserv",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "hsbc-rupay-cashback",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "yes-reserv",
      "equitas-selfe",
      "sbi-card-miles-prime",
      "sbi-card-miles-elite",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "kotak-cashback-plus",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "axis-magnus-burgundy",
      "kotak-solitaire",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-orange",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hdfc-diners-club-privilege",
      "tata-neu-infinity-sbi",
      "hsbc-visa-platinum",
      "hdfc-tata-neu-infinity",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "yes-marquee",
      "sc-ultimate",
      "amex-platinum-travel",
      "bobcard-etihad-guest-premium",
      "hdfc-marriott-bonvoy",
      "equitas-powermiles",
      "indusind-eazydiner",
    ],
  },
  "segment-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "sc-ultimate",
      "yes-marquee",
      "amex-platinum-travel",
      "bobcard-etihad-guest-premium",
      "indusind-eazydiner",
      "amex-membership-rewards",
      "hdfc-marriott-bonvoy",
    ],
  },
  "segment-super-premium": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
      "kotak-solitaire",
      "axis-magnus",
      "icici-times-black",
      "aurum-sbi",
      "kotak-white-reserve",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "idfc-first-earn",
      "icici-hpcl-super-saver",
    ],
    "Rewards cards": [
      "amex-platinum-reserve",
      "idfc-first-power-plus",
      "kotak-pvr-inox",
      "hdfc-indianoil",
      "sc-priority-visa-infinite",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "axis-ace",
      "sbm-paisabazaar-paisa-plus",
      "icici-amazon-pay",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "equitas-powermiles",
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-rupay-cashback",
      "titan-sbi",
      "hsbc-live-plus",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy-orange",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hsbc-travelone",
      "hdfc-diners-club-black-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy-orange",
      "hsbc-rupay-cashback",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "axis-ace",
      "yes-kiwi",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-cashback": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "sbi-cashback",
      "hdfc-swiggy-orange",
      "axis-airtel",
      "axis-ace",
      "csb-jupiter-edge-plus",
    ],
    "Rewards cards": [
      "cheq-au",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
      "bpcl-sbi-octane",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "hdfc-marriott-bonvoy",
      "rbl-platinum-maxima-plus",
      "indusind-eazydiner",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-airtel",
      "csb-jupiter-edge-plus",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "hdfc-diners-club-privilege",
      "cheq-au",
      "hdfc-marriott-bonvoy",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "idfc-first-power-plus",
      "sc-platinum-rewards",
      "hdfc-indianoil",
      "axis-indianoil-premium",
      "axis-indianoil",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hsbc-live-plus",
      "phonepe-sbi-select-black",
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "sbi-card-prime",
      "yes-marquee",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "bobcard-eterna",
      "yes-reserv",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "axis-fibe",
      "apollo-sbi-select",
      "axis-ace",
      "cheq-au",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
      "hdfc-diners-club-black-metal",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "hsbc-rupay-cashback",
      "phonepe-sbi-purple",
      "phonepe-sbi-select-black",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "yes-reserv",
      "equitas-selfe",
      "sbi-card-miles-prime",
      "sbi-card-miles-elite",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "bobcard-eterna",
      "yes-reserv",
    ],
  },
  "premium-degrade-single": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "sc-ultimate",
      "yes-marquee",
      "amex-platinum-travel",
      "bobcard-etihad-guest-premium",
      "indusind-eazydiner",
      "amex-membership-rewards",
      "hdfc-marriott-bonvoy",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "yes-kiwi",
      "sbi-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
}
`;
